--- a/src/components/NavigationMap.scss
+++ b/src/components/NavigationMap.scss
@@ -1,5 +1,10 @@
 @import "../styles/vars";
 
+$z-index-0: -100;
+$z-index-1: 14;
+$z-index-2: 99999;
+$z-index-3: 999999;
+
 .navigation-map {
   $poly-transition: 1s;
 
@@ -28,7 +33,7 @@
       width: auto;
       // height: 100vh;
       height: auto;
-      z-index: -100;
+      z-index: $z-index-0;
       transform: translateX(-50%) translateY(-50%);
       background-size: cover;
       transition: 1s opacity;
@@ -47,7 +52,7 @@
         height: 100%;
         width: 100%;
         transform: translate(-50%, -50%) scale(1.2);
-        z-index: 99999;
+        z-index: $z-index-2;
 
         polygon {
           transition: $poly-transition;
@@ -114,7 +119,7 @@
         left: 0;
         height: 100%;
         width: 100%;
-        z-index: 999999;
+        z-index: $z-index-3;
         pointer-events: none;
         color: $secondary-text;
 
@@ -158,7 +163,7 @@
     .logo,
     .link-container {
       position: absolute;
-      z-index: 14;
+      z-index: $z-index-0;
     }
 
     .logo {
@@ -260,6 +265,7 @@
     width: 20em;
     transform: translate(-9%, 0);
     font-size: 10px;
+    z-index: $z-index-3;
   }
   .bg-rescue {
     position: fixed;
@@ -270,7 +276,7 @@
     width: auto;
     // height: 100vh;
     height: auto;
-    z-index: -100;
+    z-index: $z-index-0;
     transform: translateX(-50%) translateY(-50%);
     background-size: cover;
   }
