--- a/src/components/InnerPageLayout.scss
+++ b/src/components/InnerPageLayout.scss
@@ -23,8 +23,9 @@
 
     .inner-page-content-container {
       position: relative;
+      display: flex; // Safari fix for no scroll bug - Safari needs nested flex items
       max-height: 100%;
-      padding: 40px 0 0 0;
+      margin: 40px 0 0 0;
 
       h3 {
         font-size: 0.8em;
